--- a/annotation/index.html
+++ b/annotation/index.html
@@ -14,7 +14,62 @@
 <div id="lyrics"></div>
 
 <script>
-	// Complete this section and create a CSS file named style.css
+	var video = document.getElementById("failvideo");
+	var lyrics = document.getElementById("lyrics");
+
+	video.addEventListener("timeupdate", function(){
+		if (video.currentTime < 9){
+			lyrics.innerHTML = "<p>Mariah Carey - Emotion </p>";
+		}
+		if (video.currentTime >= 9 && video.currentTime < 13){
+			lyrics.innerHTML = "<p>You've got me feelin' emotions</p>"
+		}
+		if (video.currentTime >= 13 && video.currentTime < 17){
+			lyrics.innerHTML = "<p>Deeper than I've ever dreamed of</p>"
+		}
+		if (video.currentTime >= 17 && video.currentTime < 22){
+			lyrics.innerHTML = "<p>You've got me feelin' emotions</p>"
+		}
+		if (video.currentTime >= 22 && video.currentTime < 26){
+			lyrics.innerHTML = "<p>Higher than the heavens above</p>"
+		}
+		if (video.currentTime >= 26 && video.currentTime < 30){
+			lyrics.innerHTML = "<p>I feel good, I feel nice</p>"
+		}
+		if (video.currentTime >= 30 && video.currentTime < 34){
+			lyrics.innerHTML = "<p>I've never felt so satisfied</p>"
+		}
+		if (video.currentTime >= 34 && video.currentTime < 38){
+			lyrics.innerHTML = "<p>I'm in love, I'm alive</p>"
+		}
+		if (video.currentTime >= 38 && video.currentTime < 43){
+			lyrics.innerHTML = "<p>Intoxicated, flyin' high</p>"
+		}
+		if (video.currentTime >= 43 && video.currentTime < 46){
+			lyrics.innerHTML = "<p>Feels like a dream</p>"
+		}
+		if (video.currentTime >= 46 && video.currentTime < 51){
+			lyrics.innerHTML = "<p>When you touch me tenderly</p>"
+		}
+		if (video.currentTime >= 51 && video.currentTime < 55){
+			lyrics.innerHTML = "<p>I don't know if it's real</p>"
+		}
+		if (video.currentTime >= 55 && video.currentTime < 59){
+			lyrics.innerHTML = "<p>But I like the way I feel inside</p>"
+		}
+		if (video.currentTime >= 59 && video.currentTime < 63){
+			lyrics.innerHTML = "<p>You've got me feelin' emotions</p>"
+		}
+		if (video.currentTime >= 63 && video.currentTime < 66){
+			lyrics.innerHTML = "<p>Deeper than I've ever dreamed of</p>"
+		}
+		if (video.currentTime >= 66 && video.currentTime < 72){
+			lyrics.innerHTML = "<p>You've got me feelin' emotions</p>"
+		}
+		if (video.currentTime >= 72 && video.currentTime < 77){
+			lyrics.innerHTML = "<p>Higher than the heavens above</p>"
+		}
+	}, false)
 </script>
 </body>
 </html>	
