--- a/notuber/index.html
+++ b/notuber/index.html
@@ -20,19 +20,7 @@
 			center: me,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 		};
-		var vehicles;
-
-		var request = new XMLHttpRequest();
-		var params = "username=u48FRAF7&lat=" + myLat + "&lng=" + myLng;
-		request.open("POST", "https://defense-in-derpth.herokuapp.com/submit", true);
-		request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-		request.onreadystatechange = function(){
-			if (request.readyState == 4 && request.status == 200){
-				vehicles = JSON.parse(request.responseText);
-				console.log(vehicles);
-			}
-		}
-		request.send(params);
+		var vehicles = [];
 
 
 		function init(){
@@ -46,6 +34,7 @@
 					myLat = position.coords.latitude;
 					myLng = position.coords.longitude;
 					renderMap();
+					makeRequest();
 				});
 			}
 			else {
@@ -54,7 +43,7 @@
 		}
 
 		function renderMap(){
-			// for me, a passenger
+			// for me
 			me = new google.maps.LatLng(myLat, myLng);
 
 			map.panTo(me);
@@ -70,9 +59,29 @@
 				infowindow.setContent(marker.title);
 				infowindow.open(map, marker);
 			});
+		}
 
+		function makeRequest(){
+			var request = new XMLHttpRequest();
+			var params = "username=u48FRAF7&lat=" + myLat + "&lng=" + myLng;
+			request.open("POST", "https://defense-in-derpth.herokuapp.com/submit", true);
+			request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			request.onreadystatechange = function(){
+				if (request.readyState == 4 && request.status == 200){
+					vehicles = JSON.parse(request.responseText);
+					console.log(vehicles);
+					findCars(vehicles);
+				}
+			}
+			request.send(params);
+		}
+
+		function findCars(vehicles){
 			// for vehicles
+			console.log(vehicles);
+			console.log(vehicles.length);
 			for (var i = 0; i < vehicles.length; i++){
+				console.log("looping");
 				var car = new google.maps.LatLng(vehicles[i].lat, vehicles[i].lng);
 				marker = new google.maps.Marker({
 					position: car,
@@ -81,8 +90,10 @@
 				});
 				marker.setMap(map);
 
+				var distance = computeDistanceBetween(me, car) / 1609;
+
 				google.maps.event.addListener(marker, 'click', function(){
-					infowindow.setContent(marker.title);
+					infowindow.setContent("username: " + marker.title + "<br />");
 					infowindow.open(map, marker);
 				});
 			}
