--- a/notuber/index.html
+++ b/notuber/index.html
@@ -66,10 +66,11 @@
 		function makeRequest(){
 			var request = new XMLHttpRequest();
 			var params = "username=u48FRAF7&lat=" + myLat + "&lng=" + myLng;
-			request.open("POST", "https://defense-in-derpth.herokuapp.com/submit", true);
+			request.open("POST", "https://ancient-peak-44957.herokuapp.com/submit", true);
 			request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 			request.onreadystatechange = function(){
 				if (request.readyState == 4 && request.status == 200){
+					console.log(request.responseText);
 					others = JSON.parse(request.responseText);
 					findOthers();
 				}
