--- a/notuber/index.html
+++ b/notuber/index.html
@@ -70,8 +70,8 @@
 			request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 			request.onreadystatechange = function(){
 				if (request.readyState == 4 && request.status == 200){
-					console.log(request.responseText);
 					others = JSON.parse(request.responseText);
+					console.log(others);
 					findOthers();
 				}
 			}
