working on assignment 3

--- a/notuber/index.html
+++ b/notuber/index.html
@@ -104,6 +104,7 @@
 			}
 			// to find drivers
 			else if (others.vehicles !== null){
+				console.log("here");
 				for (var i = 0; i < others.vehicles.length; i++){
 					var other = new google.maps.LatLng(others.vehicles[i].lat, others.vehicles[i].lng);
 					var distance = google.maps.geometry.spherical.computeDistanceBetween(me, other);
